# gem_picker

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml
.claude/: settings.json
docs/: mcp_tools_discovered.md
launchd/: com.quangbui.gempicker.plist
scripts/: run_daily.sh  setup_mcp.sh
src/gempicker/: cli.py  config.py  db.py  lock.py  models.py  pipeline.py  pricing.py  trade_log.py
src/gempicker/data_sources/: base.py  coinbase_products.py  coingecko.py  defillama.py  etherscan.py  finnhub.py  fmp.py  reddit.py  sec_edgar.py  stocktwits.py
src/gempicker/judge/: claude_runner.py  prompt_builder.py  result_parser.py
src/gempicker/scoring/: crypto_scoring.py  normalize.py  stock_scoring.py
src/gempicker/screeners/: crypto_screener.py  stock_screener.py
src/gempicker/ui/: app.py
tests/: conftest.py  test_base_cache.py  test_crypto_screener.py  test_db_idempotency.py  test_lock.py  test_pipeline_dry_run.py  test_reddit.py  test_scoring.py  test_sec_edgar.py  test_stock_screener.py
