[project]
name = "gempicker"
version = "0.1.0"
description = "Fully autonomous daily small-cap stock/crypto picker"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tenacity>=8.3",
    "streamlit>=1.38",
    "pandas>=2.2",
]

[project.scripts]
gempicker = "gempicker.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "responses>=0.25",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gempicker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
